<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <!--The top view with name and address of user  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:text="@string/user_name"
            android:textColor="@color/textColor"
            android:textSize="38sp"
            app:fontFamily="@font/roboto_mono_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:text="@string/address"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:fontFamily="@font/roboto_mono_bold" />
    </RelativeLayout>

    <!-- The view with the 4 buttons -->
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimary"
            android:rowCount="2"
            android:columnCount="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:orientation="horizontal">


            <!-- The top left button - Laundry-->
            <ImageButton
                android:id="@+id/laundryButton"
                android:contentDescription="@string/bar_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/imageButtonackground"
                android:src="@drawable/laundry_icon"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_margin="10dp" />

            <!-- The top right button - Gym -->
            <ImageButton
                android:id="@+id/gymButton"
                android:contentDescription="@string/gym_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/imageButtonackground"
                android:src="@drawable/gym_icon"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_margin="10dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:orientation="horizontal">

            <!-- The bottom left button - Bar -->
            <ImageButton
                android:id="@+id/barButton"
                android:contentDescription="@string/bar_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/imageButtonackground"
                android:src="@drawable/bar_icon"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_margin="10dp"/>

            <!-- The bottom right button - Music -->
            <ImageButton
                android:id="@+id/musicButton"
                android:contentDescription="@string/music_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/imageButtonackground"
                android:src="@drawable/music_icon"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_margin="10dp"/>

            </LinearLayout>

        </GridLayout>

</LinearLayout>